--- a/P05-Views/Views/Home/Index.cshtml
+++ b/P05-Views/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
 @using P05_Views.Models
 
 @{
-    List<Person>? people = (List<Person>)ViewData["people"];
+    // List<Person>? people = (List<Person>)ViewData["people"];
+    List<Person> people = ViewBag.people;
 }
 
 @{
@@ -30,11 +31,10 @@
     <div>
         <span>@p.Name, </span>
         <span>@p.PersonGender, </span>
-        @if (p.DateOfBirth != null)
-        {
-            @p.DateOfBirth.Value.ToString("MM/dd/yyyy")
-            <span>,@GetAge(p.DateOfBirth) years old</span>
-        }
+
+        @p.DateOfBirth?.ToString("MM/dd/yyyy")
+        <span>,@GetAge(p.DateOfBirth) years old</span>
+        
     </div>
 }
 </body>
