--- a/P06-Layout-Views/Views/Shared/_Layout.cshtml
+++ b/P06-Layout-Views/Views/Shared/_Layout.cshtml
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Demo</title>
+    <title>@ViewData["Title"]</title>
     <link href="StyleSheet.css" rel="stylesheet"/>
 </head>
 <body>
