--- a/P06-Layout-Views/Views/Product/Search.cshtml
+++ b/P06-Layout-Views/Views/Product/Search.cshtml
@@ -1,7 +1,8 @@
 
 @{
-    Layout = "_Layout";
+    // Layout = "_Layout";
     ViewData["Title"] = "Search Title";
+    Layout = "_ProductLayout";
 }
 
 <h1>Search</h1>
