layout views section

--- a/P06-Layout-Views/Views/Product/Search.cshtml
+++ b/P06-Layout-Views/Views/Product/Search.cshtml
@@ -2,7 +2,10 @@
 @{
     // Layout = "_Layout";
     ViewData["Title"] = "Search Title";
-    Layout = "_ProductLayout";
+    if (ViewBag.productId != null)
+    {
+        Layout = "_ProductLayout";
+    }
 }
 
 <h1>Search</h1>
