--- a/P06-Layout-Views/Views/Shared/_Layout.cshtml
+++ b/P06-Layout-Views/Views/Shared/_Layout.cshtml
@@ -24,6 +24,10 @@
     @RenderBody()
 </div>
 
+<div class="footer-content">
+    @RenderSection("footer_section",false)
+</div>
+
 
 </body>
 </html>
