--- a/P06-Layout-Views/Views/Shared/_Layout.cshtml
+++ b/P06-Layout-Views/Views/Shared/_Layout.cshtml
@@ -1,3 +1,6 @@
+@{
+    Layout = "_MasterLayout";
+}
 <!DOCTYPE html>
 <html>
 <head>
@@ -25,7 +28,7 @@
 </div>
 
 <div class="footer-content">
-    @RenderSection("footer_section",false)
+    @RenderSection("footer_section", false)
 </div>
 
 
