--- a/P07-Partial-Views/Views/Shared/_ListPartialView.cshtml
+++ b/P07-Partial-Views/Views/Shared/_ListPartialView.cshtml
@@ -1,10 +1,18 @@
 <div class="list-container">
-    <h3>Cities</h3>
+
+    <h3>@(ViewBag.ListTitle ?? "Default Title")</h3>
+
     <ul class="list">
-        <li>London</li>
-        <li>Paris</li>
-        <li>New York</li>
-        <li>Tokyo</li>
-        <li>Rome</li>
+        @if (@ViewBag.ListItems != null)
+        {
+            foreach (string city in @ViewBag.ListItems)
+            {
+                <li>@city</li>
+            }
+        }
+        else
+        {
+            <li>No items available</li>
+        }
     </ul>
 </div>
