Get hierarchical values: 1.use ":" 2.use GetSection()

--- a/P10-Configuration/Views/Home/Index.cshtml
+++ b/P10-Configuration/Views/Home/Index.cshtml
@@ -12,6 +12,8 @@
     <div class="box">
         <div>@ViewBag.MyKey1</div>
         <div>@ViewBag.MyKey2</div>
+        <div>@ViewBag.ClientID</div>
+        <div>@ViewBag.ClientSecret</div>
     </div>
 </div>
 </body>
