--- a/P11-HttpClient/Views/Shared/_Layout.cshtml
+++ b/P11-HttpClient/Views/Shared/_Layout.cshtml
@@ -12,9 +12,9 @@
     <div class="page-content">
         <div class="margin-bottom">
             <div class="flex" id="top-bar-div">
-                <div class="flex-1">
+                <div class="flex-1" id="app-title-div">
                     <h1 class="app-title">
-                        <i class="fa-solid fa-money-bill-money-up"> </i>
+                        <i class="fa-solid fa-money-bill-trend-up"></i>
                         Stocks
                     </h1>
                 </div>
