--- a/P11-HttpClient/Views/Home/Index.cshtml
+++ b/P11-HttpClient/Views/Home/Index.cshtml
@@ -1,5 +1,35 @@
+@model P11_HttpClient.Models.Stock
 @{
     ViewBag.Title = "Home Title";
 }
 
-<h1>Home</h1>
+<div class="box trading-panel">
+    <div class="flex trading-panel-flex">
+        <div id="stock-price-panel">
+            <h1 class="stock-title">@Model.StockSymbol</h1>
+            <table>
+                <tbody>
+                <tr>
+                    <td>Current:</td>
+                    <th><small>$</small><span class="price">@Model.CurrentPrice</span></th>
+                </tr>
+
+                <tr>
+                    <td>Highest:</td>
+                    <th><small>$</small><span class="price">@Model.HighestPrice</span></th>
+                </tr>
+
+                <tr>
+                    <td>Lowest:</td>
+                    <th><small>$</small><span class="price">@Model.LowestPrice</span></th>
+                </tr>
+
+                <tr>
+                    <td>Open:</td>
+                    <th><small>$</small><span class="price">@Model.OpenPrice</span></th>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
